<resources>
    <string name="app_name">Explore Our Services</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="booking">Booking</string>
    <string name="profile">Profile</string>
    <string name="helloo">helloo</string>
    <string name="radiobtn1">Male</string>
    <string name="radiobtn2">Female</string>
    <string name="servicetype">Service Type</string>
    <string name="chooselocation">Choose Location</string>
    <string name="workerpreferences">Worker Preferences</string>
    <string name="actionbartext">Booking</string>/>
    <string name="address">Enter Address</string>/>
    <string name="addon">Add On</string>
    <string name="dishwashing">Dishwashing</string>
    <string name="broomingmopping">Brooming,Mopping</string>
    <string name="dusting">Dusting</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="onemonth">1 Month</string>
    <string name="sixmonth">6 Month</string>
    <string name="oneyear">1 year</string>
    <string name="payment">payment</string>
    <string name="selectpackage">Select Packge</string>
    <string name="selectage">Select Baby Age</string>
    <string name="belowoneyear"> Below 1 year</string>
    <string name="onetothreeyears"> 1 To 2.5 years</string>
    <string name="morethanthreeyears">More than 3 years</string>
    <string name="selecttime">Select Timeing</string>
    <string name="anyremark">Any Remark</string>
    <string name="userName">Chetan Salunke</string>
    <string name="mobileNumber">8975954638</string>
    <string name="logout"> Logout</string>
    <string name="cookingService"> Cooking Service</string>
    <string name="domesticService"> Domestic Service</string>
    <string name="babySitterService"> Baby sitter Service</string>
    <string name="elderCareService"> Elder Care Service</string>
    <string name="patientCareService"> Patient Service</string>
    <string name="petCareService"> Pet Service</string>
    <string name="officeBoyService"> Office Boy Service</string>
    <string name="driverService"> Driver Service</string>

    <string name="navopen">Open Nav</string>
    <string name="navclose">Close Nav</string>





    <string name="location">Your Location</string>
</resources>