<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent"
    tools:context=".BookingActivity">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <include layout="@layout/booking_appbar"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            </androidx.constraintlayout.widget.ConstraintLayout>



            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/chooselocation"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        android:layout_marginTop="8dp"/>

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="48sp"
                        android:layout_marginStart="2sp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:dropDownWidth="200dp"
                        android:padding="8dp"
                        android:textSize="16sp"
                        android:theme="@style/bodyText"
                        tools:layout_marginTop="6sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        android:layout_marginTop="8dp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Address">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:background="@drawable/edit_text_background"
                            android:textSize="16sp"
                            android:padding="12dp"
                            />
                    </com.google.android.material.textfield.TextInputLayout>



                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/workerpreferences"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        android:layout_marginTop="8dp"/>
                    <RadioGroup
                        android:id="@+id/radioGroup1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                    <RadioButton
                        android:id="@+id/radioBtn1"
                        android:layout_width="match_parent"
                        android:text="Male"
                        android:layout_height="48sp"/>
                    <RadioButton
                        android:id="@+id/radioBtn2"
                        android:layout_width="match_parent"
                        android:text="Female"
                        android:layout_height="48sp"/>
                    </RadioGroup>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/addon"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        android:layout_marginTop="8dp"/>

                    <CheckBox
                        android:id="@+id/checkBox1"
                        android:layout_width="match_parent"
                        android:layout_height="48sp"
                        android:text="@string/dishwashing" />
                    <CheckBox
                        android:id="@+id/checkBox2"
                        android:layout_width="match_parent"
                        android:layout_height="48sp"
                        android:text="@string/broomingmopping" />
                    <CheckBox
                        android:id="@+id/checkBox3"
                        android:layout_width="match_parent"
                        android:layout_height="48sp"
                        android:text="@string/dusting" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/selectpackage"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        android:layout_marginTop="8dp"/>

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/radioBtn3"
                            android:layout_width="match_parent"
                            android:text="@string/onemonth"
                            android:layout_height="48sp"/>
                        <RadioButton
                            android:id="@+id/radioBtn4"
                            android:layout_width="match_parent"
                            android:text="@string/sixmonth"
                            android:layout_height="48sp"/>
                        <RadioButton
                            android:id="@+id/radioBtn5"
                            android:layout_width="match_parent"
                            android:text="@string/oneyear"
                            android:layout_height="48sp"/>

                    </RadioGroup>


                    <TextView
                        android:layout_width="match_parent"
                        android:theme="@style/smallText"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        android:layout_marginTop="8dp"/>

                    <Button
                        android:id="@+id/bookingButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Book Now"
                        android:padding="16dp"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:layout_margin="16dp"
                        android:background="@drawable/button_background"


                     />


                </LinearLayout>
            </androidx.cardview.widget.CardView>



        </LinearLayout>




    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>