<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.homeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="5dp"
                app:cardCornerRadius="15dp">

                <com.denzcoskun.imageslider.ImageSlider
                    android:id="@+id/image_slider"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:iss_auto_cycle="true"
                    app:iss_delay="2000"
                    app:iss_period="2000"
                    app:iss_text_align="CENTER">

                </com.denzcoskun.imageslider.ImageSlider>


            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/andika_new_basic_bold"
                android:text="Categories"
                android:textSize="16sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:elevation="4dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/domesticServiceImg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="6dp">

                        <!-- ImageView -->
                        <ImageView
                            android:id="@+id/domesticServiceImg1"
                            android:layout_width="69dp"
                            android:layout_height="53sp"
                            android:scaleType="centerCrop"
                            android:src="@mipmap/domestic" />

                        <!-- TextView -->
                        <TextView
                            android:gravity="center"
                            android:id="@+id/domesticServicesTv"
                            android:layout_width="72sp"
                            android:layout_height="35sp"
                            android:text="domestic service"
                            android:textSize="12sp"
                            android:textStyle="bold"

                            android:ellipsize="end"
                            android:paddingTop="8dp" />


                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/cookImg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="6dp">

                        <!-- ImageView -->
                        <ImageView
                            android:id="@+id/cookImg1"
                            android:layout_width="69dp"
                            android:layout_height="53sp"
                            android:scaleType="centerCrop"
                            android:src="@mipmap/cooking_icon" />

                        <!-- TextView -->
                        <TextView
                            android:gravity="center"
                            android:id="@+id/cookingTv"
                            android:layout_width="72sp"
                            android:layout_height="35sp"
                            android:text="@string/cookingService"
                            android:textSize="12sp"
                            android:textStyle="bold"

                            android:ellipsize="end"
                            android:paddingTop="8dp" />


                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/babySitterImg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="6dp">

                        <!-- ImageView -->
                        <ImageView
                            android:id="@+id/babySitterImg1"
                            android:layout_width="69dp"
                            android:layout_height="53sp"
                            android:scaleType="centerCrop"
                            android:src="@mipmap/baby_sitter" />

                        <!-- TextView -->
                        <TextView
                            android:gravity="center"
                            android:id="@+id/babySitterTv"
                            android:layout_width="72sp"
                            android:layout_height="35sp"
                            android:text="@string/babySitterService"
                            android:textSize="12sp"
                            android:textStyle="bold"

                            android:ellipsize="end"
                            android:paddingTop="8dp" />


                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/elderCareImg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="6dp">

                        <!-- ImageView -->
                        <ImageView
                            android:id="@+id/elderCareImg1"
                            android:layout_width="69dp"
                            android:layout_height="53sp"
                            android:scaleType="centerCrop"
                            android:src="@mipmap/elder_care" />

                        <!-- TextView -->
                        <TextView
                            android:gravity="center"
                            android:id="@+id/elderCareTextview"
                            android:layout_width="72sp"
                            android:layout_height="35sp"
                            android:text="@string/elderCareService"
                            android:textSize="12sp"
                            android:textStyle="bold"

                            android:ellipsize="end"
                            android:paddingTop="8dp" />


                    </LinearLayout>

                </LinearLayout>


            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:elevation="4dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/patientCareImg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="6dp">

                        <!-- ImageView -->
                        <ImageView
                            android:id="@+id/patientCareImg1"
                            android:layout_width="69dp"
                            android:layout_height="53sp"
                            android:scaleType="centerCrop"
                            android:src="@mipmap/patient_care" />

                        <!-- TextView -->
                        <TextView
                            android:gravity="center"
                            android:id="@+id/patientCareTv"
                            android:layout_width="72sp"
                            android:layout_height="35sp"
                            android:text="@string/patientCareService"
                            android:textSize="12sp"
                            android:textStyle="bold"

                            android:ellipsize="end"
                            android:paddingTop="8dp" />


                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/petCareImg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="6dp">

                        <!-- ImageView -->
                        <ImageView
                            android:id="@+id/petCareImg1"
                            android:layout_width="69dp"
                            android:layout_height="53sp"
                            android:scaleType="centerCrop"
                            android:src="@mipmap/pet_care" />

                        <!-- TextView -->
                        <TextView
                            android:gravity="center"
                            android:id="@+id/petCareTextView"
                            android:layout_width="72sp"
                            android:layout_height="35sp"
                            android:text="@string/petCareService"
                            android:textSize="12sp"
                            android:textStyle="bold"

                            android:ellipsize="end"
                            android:paddingTop="8dp" />


                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/oficeBoyImg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="6dp">

                        <!-- ImageView -->
                        <ImageView
                            android:id="@+id/oficeBoyImg1"
                            android:layout_width="69dp"
                            android:layout_height="53sp"
                            android:scaleType="centerCrop"
                            android:src="@mipmap/office_boy" />

                        <!-- TextView -->
                        <TextView
                            android:gravity="center"
                            android:id="@+id/officeBoyTectView"
                            android:layout_width="72sp"
                            android:layout_height="35sp"
                            android:text="@string/officeBoyService"
                            android:textSize="12sp"
                            android:textStyle="bold"

                            android:ellipsize="end"
                            android:paddingTop="8dp" />


                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/driverImgview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="6dp">

                        <!-- ImageView -->
                        <ImageView
                            android:id="@+id/driverImgview1"
                            android:layout_width="69dp"
                            android:layout_height="53sp"
                            android:scaleType="centerCrop"
                            android:src="@mipmap/driver" />

                        <!-- TextView -->
                        <TextView
                            android:gravity="center"
                            android:id="@+id/driverTv"
                            android:layout_width="72sp"
                            android:layout_height="35sp"
                            android:text="@string/driverService"
                            android:textSize="12sp"
                            android:textStyle="bold"

                            android:ellipsize="end"
                            android:paddingTop="8dp" />


                    </LinearLayout>

                </LinearLayout>


            </androidx.cardview.widget.CardView>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>