<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.profileFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:elevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <!-- ImageView -->
                        <ImageView

                            android:layout_width="70sp"
                            android:layout_height="70sp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/profile_image" />

                        <!-- Vertical LinearLayout for TextViews -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="8dp">

                            <!-- First TextView -->

                            <!-- Second TextView -->
                            <TextView
                                android:id="@+id/userNameTv"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingBottom="8dp"
                                android:text="@string/userName"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/mobileNumberTv"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/mobileNumber"
                                android:textSize="16sp" />

                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:elevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <!-- ImageView -->
                        <ImageView
                            android:padding="3sp"
                            android:layout_width="wrap_content"
                            android:layout_height="28sp"
                            android:layout_gravity="center_vertical"
                            android:scaleType="centerCrop"
                            android:src="@drawable/logout_icon" />

                        <!-- Vertical LinearLayout for TextViews -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:orientation="vertical">

                            <!-- First TextView -->

                            <TextView
                                android:padding="6sp"
                                android:id="@+id/logoutTv"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingBottom="8dp"
                                android:text="@string/logout"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>


        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>